@@ -13,8 +13,8 @@ test_dependencies:
   - restui:restui
   - schema_metatag:schema_web_page
 
-# Information added by Drupal.org packaging script on 2019-02-20
-version: '8.x-1.8'
+# Information added by Drupal.org packaging script on 2019-07-24
+version: '8.x-1.9'
 core: '8.x'
 project: 'metatag'
-datestamp: 1550683387
+datestamp: 1563986001
